--- a/src/index.css
+++ b/src/index.css
@@ -5,205 +5,211 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-  .container {
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+    background-color: #F9F8F4;
+}
+#root {
+  min-height: 100%;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+.container {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
-  .comparison {
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  
-  .text {
-    line-height: 0.1;
-  }
-  
-  .attributes {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.3rem;
-  }
-  
-  .checked {
-    color: #CAE00D;
-  }
-  
-  .rent-price {
-    width: 30%;
-    text-align: left;
-  }
-  #login {
-    background-color: rgba(112, 199, 131, 0.9);
-    padding: 0 0.8rem;
-    margin: 0 0 0 0.4rem;
-    border-radius: 5px;
-    font-weight: 900;
-    color: #ffffff;
-  }
-  .header-link {
-    color: #A6ACA8;
-    padding: 0 1.2rem;
-  }
-  .header-link:hover {
-    text-decoration: none;
-    color: #A6ACA8;
-    opacity: 0.75;
-  }
-  .plus-button {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    border: 0;
-    padding: 0;
-    background: rgba(0,0,0, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-  .plus-sign {
-    font-size: 25px;
-  }
-  .hero {
-    margin: 0 auto;
-    padding: 1rem;
-    position: relative;
-  }
-  .mail {
-    position: absolute;
-    top: 0;
-    margin-left: 1.5rem;
-  }
-  .tagline {
-    margin: 0 auto;
-  }
-  .arrow {
-    height: 100%;
-  }
-  
-  .top-left {
-    top: -70px;
-    left: 0;
-    text-align: left;
-    border-bottom: 2px solid whitesmoke;
-  }
-  .bottom-left {
-    text-align: left;
-  }
-  
-  .bottom-right {
-    text-align: right;
-  }
+/* HEADER SECTION */
+#login {
+  background-color: rgba(112, 199, 131, 0.9);
+  padding: 0 0.8rem;
+  margin: 0 0 0 0.4rem;
+  border-radius: 5px;
+  font-weight: 900;
+  color: #ffffff;
+}
+.header-link {
+  color: #656665;
+  padding: 0 1.2rem;
+}
+.header-link:hover {
+  text-decoration: none;
+  color: #656665;
+  opacity: 0.75;
+}
 
-  .searchbox {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  .search-input {
-    display: block;
-    width: 35%;
-    height: 40px;
-  }
-  .grid {
-    width: 35%;
-  }
-  .result {
-    width: 100%;
-    margin: 0.2rem 0;
-    padding: 0.3rem 1rem;
-    border: 2px solid rgb(118, 118, 118);
-    border-radius: 6px;
-  }
-  .result:hover {
-    cursor: pointer;
-    background-color: #E5E5E5;
-  }
-  .comparison-container {
-    width: 90%;
-    margin: 2rem auto;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    border: 2px solid gold;
-    border-radius: 3px;
-  }
-  .card-list {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  #comparison-header {
-    text-align: center;
-    margin: 1rem;
-    color: rgb(101, 102, 101);
-    font-size: 1.5rem;
-  }
-  .compareButton {
-    margin: 0 auto;
-  }
-  .stat-section {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-self: flex-end;
-    background-color: rgba(112, 199, 131, 0.9);
-  }
-  .stat-section ul {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem 0;
-  }
+/* CITY CARD */
+.plus-button {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border: 0;
+  padding: 0;
+  background: rgba(0,0,0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.plus-sign {
+  font-size: 25px;
+}
+.attributes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.3rem;
+}
+.rent-price {
+  width: 30%;
+  text-align: left;
+}
+.checked {
+  color: #CAE00D;
+}
 
-  /* ABOUT PAGE */
-  .social {
-    display: block;
-    color: rgba(255, 255, 255, .8);
-    font-size: 20px;
-    height: 60px;
-    width: 60px;
-    position: relative;
-  }
+/* HERO SECTION */
+.hero {
+  margin: 0 auto;
+  padding: 1rem;
+  position: relative;
+}
+.mail {
+  position: absolute;
+  top: 0;
+  margin-left: 1.5rem;
+}
+.tagline {
+  margin: 0 auto;
+}
 
-  .social:hover,
-  .social:active {
-    color: rgba(255, 255, 255, .8);
-  }
+/* ALIGNMENT */
+.top-left {
+  top: -70px;
+  left: 0;
+  text-align: left;
+  border-bottom: 2px solid whitesmoke;
+}
+.bottom-left {
+  text-align: left;
+}
+.bottom-right {
+  text-align: right;
+}
 
-  .social:hover > .text {
-    opacity: 1;
-  }
-  .social:hover > .icon {
-    opacity: 0;
-  }
+/* SEARCH BAR */
+.searchbox {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.search-input {
+  display: block;
+  width: 35%;
+  height: 40px;
+}
+.grid {
+  width: 35%;
+}
+.result {
+  width: 100%;
+  margin: 0.2rem 0;
+  padding: 0.3rem 1rem;
+  background-color: #FFFFFF;
+  
+  border: 2px solid rgb(118, 118, 118);
+  border-radius: 6px;
+}
+.result:hover {
+  cursor: pointer;
+  background-color: #F9F8F4;
+}
 
-  .text,
-  .icon {
-    display: block;
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    text-transform: uppercase;
-    transition: all 0.3s ease-out;
-  }
-  .text {
-    font-size: 1rem;
-    opacity: 0;
-  }
+/* COMPARISON CONTAINER */
+.comparison {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.comparison-container {
+  width: 90%;
+  margin: 2rem auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid gold;
+  border-radius: 3px;
+}
+.card-list {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+#comparison-header {
+  text-align: center;
+  margin: 1rem;
+  color: rgb(101, 102, 101);
+  font-size: 1.5rem;
+}
+.compareButton {
+  margin: 0 auto;
+}
+.stat-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-self: flex-end;
+  background-color: rgba(112, 199, 131, 0.9);
+}
+.stat-section ul {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+
+/* ABOUT PAGE */
+.social {
+  display: block;
+  color: rgba(255, 255, 255, .8);
+  font-size: 20px;
+  height: 60px;
+  width: 60px;
+  position: relative;
+}
+.social:hover,
+.social:active {
+  color: rgba(255, 255, 255, .8);
+}
+.social:hover > .text {
+  opacity: 1;
+}
+.social:hover > .icon {
+  opacity: 0;
+}
+.text,
+.icon {
+  display: block;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  text-transform: uppercase;
+  transition: all 0.3s ease-out;
+}
+.text {
+  font-size: 1rem;
+  opacity: 0;
+}
+
+
+/* DATA VISUALIZATION PAGE */
+.menuLogo {
+  max-width: 100%;
+}
