--- a/src/index.css
+++ b/src/index.css
@@ -213,3 +213,43 @@ code {
 .menuLogo {
   max-width: 100%;
 }
+
+
+
+/* MODAL */
+
+.modalHeader{
+  font-family: Amatic SC;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.modalSubheader{
+  font-family: Amatic SC;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-align: center;
+} 
+
+
+.modalData{
+
+  font-family: Amatic SC;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.modalKey{
+
+  font-family: roboto;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
