--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,75 @@ code {
 }
 
 /* SEARCH BAR */
-.searchbox {
+.search {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 6rem;
+}
+
+.search-box {
+  position: relative;
+  background: rgba(112, 199, 131, 0.7);
+  height: 3rem;
+  border-radius: 3rem;
+}
+
+.search-btn {
+  font-size: 1.1rem;
+  color: rgba(112, 199, 131, 0.9);
+  float: right;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background: #2f3640;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-btn:hover {
+  color: rgba(112, 199, 131, 0.9);
+}
+
+.search-box:focus-within > .search-input {
+  width: 20rem;
+  padding: 0 .6rem;
+}
+
+.search-input {
+  border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding: 0;
+  color: white;
+  font-size: 1.2rem;
+  transition: .4s;
+  line-height: 2.8rem;
+  width: 0;
+}
+
+.grid {
+  position: absolute;
+  width: 15rem;
+  padding: .2rem;
+  margin-top: 10rem;
+  z-index: 10;
+}
+
+.result {
+  color: #2f3640;
+  border-radius: .3rem;
+  text-align: center;
+  width: 100%;
+  height: 1.2rem;
+  margin: .1rem;
+  background: rgba(112, 199, 131, .9);
+}
+
+/* .searchbox {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -125,8 +193,8 @@ code {
 }
 .result:hover {
   cursor: pointer;
-  background-color: #F9F8F4;
-}
+  background-color: rgba(112, 199, 131, 0.7);
+} */
 
 /* COMPARISON CONTAINER */
 .comparison {
