--- a/src/index.css
+++ b/src/index.css
@@ -291,6 +291,11 @@ code {
   font-weight: bold;
   font-size: 2.5vw;
 }
+.data-viz {
+  box-shadow: 3px 4px 22px -4px rgba(0,0,0,.46);
+  border-radius: 6px;
+  margin: 1rem 0;
+}
 
 
 
