--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,9 @@ code {
 }
 
 /* DATA VISUALIZATION DRAWER */
+.anticon-close {
+  margin: 0 6px;
+}
 .anticon-close:hover {
   opacity: 0.75;
   cursor: pointer;
