--- a/src/index.css
+++ b/src/index.css
@@ -443,8 +443,11 @@ code {
   padding: 0 1rem;
 }
 .ant-slider-with-marks {
-  margin: 34px 1.5rem;
+  margin: 1.2rem 2.0rem;
   font-family: 'Oswald', 'sans serif';
+}
+.ant-menu-sub {
+  padding-bottom: 1rem !important;
 }
 .ant-menu-submenu {
   background: rgba(112, 199, 131);
@@ -476,5 +479,5 @@ code {
   align-items: center;
 }
 #get-results-button:hover {
-  opacity: 0.7;
+  opacity: 0.85;
 }
