--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,7 @@ code {
   display: flex;
   align-items: center;
   flex-direction: column;
-  border: 2px solid gold;
+  /* border: 2px solid gold; */
   border-radius: 6px;
 }
 .card-list {
