Integrate modal box with data science API to create react-plotly charts for COVID-19.

--- a/src/index.css
+++ b/src/index.css
@@ -565,6 +565,11 @@ code {
   right: 0;
 }
 
+/* ADVANCED SEARCH */
+.advanced-search-city-card, .city-card {
+  background-size: cover !important;
+}
+
 /* MOBILE VERSION */
 
 /* MOBILE NAVIGATION DRAWER */
