--- a/src/index.css
+++ b/src/index.css
@@ -132,11 +132,11 @@ code {
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
-  margin-bottom: 6rem;
+  /* margin-bottom: 6rem; */
 }
 .search-box {
   position: relative;
-  background: rgba(112, 199, 131, 0.7);
+  background: rgba(0, 0, 0, 0.3);
   height: 3rem;
   border-radius: 3rem;
 }
@@ -171,22 +171,27 @@ code {
   line-height: 2.8rem;
   width: 0;
 }
-.grid {
+
+/*      Autocomplete      */
+
+.option-container {
   position: absolute;
-  width: 15rem;
-  padding: .2rem;
-  margin-top: 10rem;
-  z-index: 10;
+  top: 20.5rem;
+  width: 19%;
+  z-index: 2;
 }
-.result {
-  color: #2f3640;
+
+.option {
   border-radius: .3rem;
-  text-align: center;
   width: 100%;
-  height: 1.2rem;
+  padding: 1rem;
   margin: .1rem;
-  background: rgba(112, 199, 131, .9);
+  cursor: pointer;
+  color: white;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, 0.3);
 }
+
 .more-filters-button {
   padding: 8px 16px;
   margin: 0.5rem auto;
