--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,7 @@ code {
 }
 .search-box {
   position: relative;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(112, 199, 131, 0.9);
   height: 3rem;
   border-radius: 3rem;
 }
@@ -165,7 +165,7 @@ code {
   outline: none;
   float: left;
   padding: 0;
-  color: white;
+  color: #2f3640;
   font-size: 1.2rem;
   transition: .4s;
   line-height: 2.8rem;
@@ -177,7 +177,7 @@ code {
 .option-container {
   position: absolute;
   top: 20.5rem;
-  width: 19%;
+  width: 23rem;
   z-index: 2;
 }
 
@@ -187,9 +187,9 @@ code {
   padding: 1rem;
   margin: .1rem;
   cursor: pointer;
-  color: white;
+  color: #2f3640;
   text-transform: uppercase;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(112, 199, 131, 0.9);
 }
 
 .more-filters-button {
